# SEODP

./: .gitignore  Dockerfile  README.md  analysis.md  analysis_home.md  directory_structure.txt  docker-compose.yml  example.md  example_data.jsonp  example_insights.json  pyproject.toml  python-repo-structure.txt  requirements.txt  response.md  review.md  seodp.db  seodpconfig.yaml  url_test.json
src/seodp/: .env.example  main.py  settings.py
src/seodp/lib/: errors.py  exceptions.py  logconfig.py  logging.py  process.py
src/seodp/lib/api/: email.py  gemini.py
src/seodp/lib/extractors/: __init__.py  base.py  ga4.py  gsc.py  psi.py  url.py
src/seodp/lib/manager/: __init__.py  aggregation.py  data.py  llm.py  url.py
src/seodp/lib/templates/: report_template.html
