[tool.poetry]
name = "seo-dp"
version = "0.1.0"
description = "SEO Data Platform for extracting data from Google Search Console and Google Analytics 4"
authors = ["Jason Roakes <jroakes@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^2.16.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.70.0"
google-analytics-data = "^0.14.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true